--- a/_posts/2017-03-25-mypost.md
+++ b/_posts/2017-03-25-mypost.md
@@ -3,4 +3,4 @@ title: mypost
 layout: post
 ---
 
-vybral jsem to proto, ze je to video pripomínajici nejvetsi uspech klubu za poslednich par let 
+Moje video
