--- a/_posts/2017-03-25-mypost.md
+++ b/_posts/2017-03-25-mypost.md
@@ -4,3 +4,5 @@ layout: post
 ---
 
 Moje video
+
+<iframe src="https://player.vimeo.com/video/95585914" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
