Změna textu u videa

--- a/_posts/2017-03-25-mypost.md
+++ b/_posts/2017-03-25-mypost.md
@@ -3,6 +3,6 @@ title: mypost
 layout: post
 ---
 
-Moje video
+Moje video, zvoleno z toho duvodu, ze se jedna o nejvetsi uspech tohoto klubu za poslednich par let
 
 <iframe src="https://player.vimeo.com/video/95585914" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
